2016-07-07  Enrico Schumann  <es@enricoschumann.net>

	* man/isWeekend.Rd: separate help page

2016-05-11  Enrico Schumann  <es@enricoschumann.net>

        * DESCRIPTION (Version): 0.1-3

	* R/functions.R (convertTZ): new function

2016-04-29  Enrico Schumann  <es@enricoschumann.net>

        * DESCRIPTION (Version): 0.1-2

	* R/functions.R (firstOfYear): new function

2016-02-22  Enrico Schumann  <es@enricoschumann.net>

        * DESCRIPTION (Version): 0.1-1

	* man/timegrid.Rd: separate help page

2015-12-09  Enrico Schumann  <es@enricoschumann.net>

	* DESCRIPTION (Version): Version: 0.1-0

	* R/functions.R (endOfYear): new function

2015-10-29  Enrico Schumann  <es@enricoschumann.net>

	* man/rfc822t.Rd: doc update

2015-10-20  Enrico Schumann  <es@enricoschumann.net>

        * DESCRIPTION (Version): 0.0-5

2015-10-20  Enrico Schumann  <es@enricoschumann.net>

	* R/functions.R (rfc822t): new argument 'include.dow'; function is
	renamed to rfc822t ('_RFC_ 822 date and _T_ime') and is now
	exported

2015-10-15  Enrico Schumann  <es@enricoschumann.net>

        * R/functions.R (rfc822): new function; not yet exported

2015-10-06  Enrico Schumann  <es@enricoschumann.net>

        * R/functions.R (reftimestamp): new function; not yet exported

2015-07-14  Enrico Schumann  <es@enricoschumann.net>

        * DESCRIPTION (Version): Version: 0.0-4

        * inst/unitTests/ut_datetime.R (test.nextBusinessDay): added tests

        * man/previousBusinessDay.Rd: updated docs

        * R/functions.R (previousBusinessDay, nextBusinessDay): new
        arguments 'shift' to get the shift-th previous or next business
        day.

2015-06-29  Enrico Schumann  <es@enricoschumann.net>

        * DESCRIPTION (Version): Version: 0.0-3

        * R/functions.R (roundPOSIXt): new argument 'up' for rounding up

        * man/roundPOSIXt.Rd: updated and moved documentation

2015-05-15  Enrico Schumann  <es@enricoschumann.net>

        * DESCRIPTION (Version): Version: 0.0-2
